tests/mm0_mmu/fail/bad-sort142.mmu
-- bad modifier order
(sort s142 pure free strict)